k8s/local/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-prj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: devops-prj-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-prj
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: NodePort
