k8s/local/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops-prj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: devops-prj-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: devops-prj
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
